--- a/rpg.html
+++ b/rpg.html
@@ -92,7 +92,7 @@
 
 
 <script src="https://code.jquery.com/jquery.js"></script>
-<script type="text/javascript" src="assets/rpg.js"></script>
+<script type="text/javascript" src="assets/javabackup.js"></script>
 
 
 
